<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/darkness"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Records">

            <Switch
                android:id="@+id/soundsswitch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/largeHeight"
                android:layout_margin="5dp"
                android:background="@drawable/gradiente"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:scrollbarThumbHorizontal="@drawable/gradiente"
                android:scrollbarThumbVertical="@color/errorcolor"
                android:text="@string/soundparam"
                android:textColor="@color/spinnertextcolor"
                android:textColorHighlight="@color/errorcolor"
                android:textColorLink="@color/colorspinners"
                android:textCursorDrawable="@color/gold"
                android:textSize="24sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBarSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradiente"
                android:max="100"
                android:padding="5dp"
                android:progress="50"
                android:progressTint="@color/btnTextColor" />

            <Switch
                android:id="@+id/musicswitch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/largeHeight"
                android:layout_margin="5dp"
                android:background="@drawable/gradiente"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/musicparam"
                android:textColor="@color/spinnertextcolor"
                android:textColorHighlight="@color/gold"
                android:textSize="24sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBarMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradiente"
                android:max="100"
                android:padding="5dp"
                android:progress="80"
                android:progressTint="@color/btnTextColor" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/Memory"
            android:layout_width="0dp"
            android:layout_height="@dimen/largeHeight"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/gradiente"
            android:padding="5dp"
            android:text="@string/cards"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/spinnertextcolor"
            android:textSize="@dimen/titleDim"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Photographic"
            android:layout_width="0dp"
            android:layout_height="@dimen/largeHeight"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/gradiente"
            android:padding="5dp"
            android:text="@string/countpictures"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/spinnertextcolor"
            android:textSize="@dimen/titleDim"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Count" />

        <Button
            android:id="@+id/Count"
            android:layout_width="0dp"
            android:layout_height="@dimen/largeHeight"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/gradiente"
            android:padding="5dp"
            android:text="@string/photographic"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/spinnertextcolor"
            android:textSize="@dimen/titleDim"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Memory" />

        <Button
            android:id="@+id/Records"
            android:layout_width="0dp"
            android:layout_height="@dimen/largeHeight"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/gradiente"
            android:padding="5dp"
            android:text="@string/Records"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/spinnertextcolor"
            android:textSize="@dimen/titleDim"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="155dp"
            android:layout_marginBottom="264dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent=".4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/MCredits"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/largeHeight"
            android:layout_margin="5dp"
            android:background="@drawable/gradiente"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/musicCredits"
            android:textColor="@color/colorspinners"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradiente"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/spinnertextcolor"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>