<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorspinners"
    tools:context=".Activity.PhotographicMemoryActivity">

    <ImageView
        android:id="@+id/PhotoIdSelect"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradiente" />

    <FrameLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="196dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ScoreLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/menudim"
        android:layout_marginTop="5dp"
        android:background="@color/spinnertextcolor"
        android:baselineAligned="false"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView">


        <TextView
            android:id="@+id/timeCount"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/gradiente"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorspinners"
            android:textSize="@dimen/dimenTextmenu"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Tips"
                android:textAlignment="center"
                android:textColor="@color/wtf"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tipcount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/initialvalue"
                android:textAlignment="center"
                android:textColor="@color/textmenucolor"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:foregroundGravity="left"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/chance"
                android:textColor="@color/set"
                android:textSize="@dimen/dimenTextmenu"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/hitScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/textmenucolor"
                android:textSize="@dimen/dimenTextmenu"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TotalIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/level"
                android:textColor="@color/textmenucolor"
                android:textSize="@dimen/dimenTextmenu"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Levelstatus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/textmenucolor"
                android:textSize="@dimen/dimmenu"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/erros"
                android:textColor="@color/errorcolor"
                android:textSize="@dimen/dimenTextmenu"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/errorCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/textmenucolor"
                android:textSize="@dimen/dimenTextmenu"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/timeview5"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/gradiente"
            app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradiente"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/PhotoIdSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modeViewP">

    </LinearLayout>

    <TextView
        android:id="@+id/ind1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/SelectImage"
        android:textColor="@color/textmenucolor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/PhotoIdSelect" />

    <TextView
        android:id="@+id/ind2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/SelectImage"
        android:textColor="@color/textmenucolor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/PhotoIdSelect" />

    <LinearLayout
        android:id="@+id/modeViewP"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/gradiente2"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScoreLayout">

        <TextView
            android:id="@+id/modeViewTextP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/textmenucolor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>